[ALG-122] Simplify SWE CNE creator (#848)
* first draft

* remove angle monitoring result

* add check on the nullity of angleMontioringResult

* add angleRas in raoResult

* fix checkstyle

* add Test

* change code according to comments

* fix test

* fix sonar issue

* move method to Utils

* remove angle ra in cne if angle diverged

* fix secure / unsecure method

* corrections

* fix test

* corrections after merge

---------

Co-authored-by: Peter <47452063+pet-mit@users.noreply.github.com>
Co-authored-by: Peter Mitri <peter.mitri@rte-france.com>