@@ -10,15 +10,19 @@ package com.farao_community.farao.data.swe_cne_exporter;
 import com.farao_community.farao.commons.Unit;
 import com.farao_community.farao.data.crac_api.Contingency;
 import com.farao_community.farao.data.crac_api.Crac;
+import com.farao_community.farao.data.crac_api.InstantKind;
 import com.farao_community.farao.data.crac_api.cnec.AngleCnec;
 import com.farao_community.farao.data.crac_creation.creator.cim.crac_creator.CimCracCreationContext;
 import com.farao_community.farao.data.crac_creation.creator.cim.crac_creator.cnec.AngleCnecCreationContext;
+import com.farao_community.farao.data.rao_result_api.ComputationStatus;
 import com.farao_community.farao.data.swe_cne_exporter.xsd.AdditionalConstraintSeries;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
 
 import static com.farao_community.farao.commons.logs.FaraoLoggerProvider.BUSINESS_WARNS;
 
@@ -38,26 +42,22 @@ public class SweAdditionalConstraintSeriesCreator {
     }
 
     public List<AdditionalConstraintSeries> generateAdditionalConstraintSeries(Contingency contingency) {
-        List<AdditionalConstraintSeries> additionalConstraintSeriesList = new ArrayList<>();
-        if (Objects.isNull(sweCneHelper.getAngleMonitoringResult())) {
-            return additionalConstraintSeriesList;
-        }
         List<AngleCnecCreationContext> sortedAngleCnecs = cracCreationContext.getAngleCnecCreationContexts().stream()
-                .filter(AngleCnecCreationContext::isImported)
-                .sorted(Comparator.comparing(AngleCnecCreationContext::getCreatedCnecId))
-                .collect(Collectors.toList());
-        if (Objects.isNull(contingency)) {
+            .filter(AngleCnecCreationContext::isImported)
+            .sorted(Comparator.comparing(AngleCnecCreationContext::getCreatedCnecId))
+            .toList();
+        if (contingency == null) {
             sortedAngleCnecs.stream().filter(angleCnecCreationContext -> Objects.isNull(angleCnecCreationContext.getContingencyId()))
-                    .forEach(angleCnecCreationContext ->
-                BUSINESS_WARNS.warn("Preventive angle cnec {} will not be added to CNE file", angleCnecCreationContext.getNativeId()));
+                .forEach(angleCnecCreationContext ->
+                    BUSINESS_WARNS.warn("Preventive angle cnec {} will not be added to CNE file", angleCnecCreationContext.getNativeId()));
+            return Collections.emptyList();
         } else {
-            sortedAngleCnecs.stream()
-                    .filter(angleCnecCreationContext -> angleCnecCreationContext.getContingencyId().equals(contingency.getId()))
-                            .map(this::generateAdditionalConstraintSeries)
-                                    .filter(Objects::nonNull)
-                                            .forEach(additionalConstraintSeriesList::add);
+            return sortedAngleCnecs.stream()
+                .filter(angleCnecCreationContext -> angleCnecCreationContext.getContingencyId().equals(contingency.getId()))
+                .map(this::generateAdditionalConstraintSeries)
+                .filter(Objects::nonNull)
+                .toList();
         }
-        return additionalConstraintSeriesList;
     }
 
     private AdditionalConstraintSeries generateAdditionalConstraintSeries(AngleCnecCreationContext angleCnecCreationContext) {
@@ -71,8 +71,8 @@ public class SweAdditionalConstraintSeriesCreator {
         additionalConstraintSeries.setMRID(angleCnecCreationContext.getCreatedCnecId());
         additionalConstraintSeries.setBusinessType(ANGLE_CNEC_BUSINESS_TYPE);
         additionalConstraintSeries.setName(angleCnec.getName());
-        if (!sweCneHelper.getAngleMonitoringResult().isDivergent()) {
-            additionalConstraintSeries.setQuantityQuantity(BigDecimal.valueOf(sweCneHelper.getAngleMonitoringResult().getAngle(angleCnec, Unit.DEGREE)).setScale(1, RoundingMode.HALF_UP));
+        if (!sweCneHelper.getRaoResult().getComputationStatus().equals(ComputationStatus.FAILURE)) {
+            additionalConstraintSeries.setQuantityQuantity(BigDecimal.valueOf(sweCneHelper.getRaoResult().getAngle(crac.getInstant(InstantKind.CURATIVE), angleCnec, Unit.DEGREE)).setScale(1, RoundingMode.HALF_UP));
         }
         return additionalConstraintSeries;
     }
